--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "framer-motion": "^10.9.1",
     "lottie-react": "^2.4.0",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
